# diploma

./: .gitignore  AGV_PROJECT_IMPLEMENTATION_FILES.md  INDEPENDENT_EXPERT_AUDIT.md  MINIMAL_REGRESSION_BASELINE.md  README.md  REPO_STRUCTURE_MANIFEST.md  SESSION_DUMP.md  SOFTWARE_BASELINE_MANIFEST.md  SOFTWARE_BASELINE_RUNBOOK.md  SOFTWARE_RUNTIME_BASELINE.md  TOP_LEVEL_TRUTH_BASELINE.md  goal.md  pyproject.toml  reorg_and_vkr_plan.md  report.md  Бланк- задание на ВКР.docx  Бланк-титул ВКР.docx  НИРС 2025.docx
00_inbox/: вывод терминала.md
01_admin/checklists/: vkr_delivery_checklist.md
02_methodology/Автоматизированные системы/: РД 50-682-89 Методические указания. Информационная технология. Комплекс стандартов.rtf
03_nirs/: README.md
03_nirs/source_docx/: НИРС_ Облачная система управления движением мобильного робота (AGV Denford).docx  НИРС_Итоговый_Основная_часть_v5_ужато_форматированием.docx  НИРС_Приложение_А_Рисунки_v1.docx  НИРС_Приложение_А_Рисунки_v1_FIXED.docx
04_vkr/: README.md
04_vkr/00_drafts/: РПЗ_ВКР_AGV_Cloud_Draft.docx
04_vkr/01_outline/: nirs_to_vkr_matrix.md  vkr_concept_passport.md  vkr_structure.md
04_vkr/02_rpz/: vkr_minimum_scope.md  vkr_writing_plan.md
05_sources/: README.md
06_engineering/: runtime_bootstrap.py
06_engineering/06_00_contract/: ACCEPTANCE_CRITERIA.md  HARDWARE_ASSUMPTIONS.md  IO_MAP.md  MQTT_CONTRACT.md  OPEN_QUESTIONS.md  REPO_EXECUTION_POLICY.md  (+4 more)
08_obsidian_vault/: 00_Dashboard.md
tests/: README.md  test_backend_validation_regression.py  test_edge_runtime_regression.py
нирс/: нирс.docx  титул.docx
(+1660 files in other folders)
