[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agv-denford-software-mvp"
version = "0.1.0"
description = "Software-only MVP contour for the AGV Denford diploma project."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary academic project" }
authors = [
  { name = "AGV Denford diploma project workspace" },
]
dependencies = [
  "amqtt>=0.11,<0.12",
  "fastapi>=0.115,<0.116",
  "httpx>=0.27,<0.29",
  "paho-mqtt>=2.1,<3",
  "pydantic>=2.9,<3",
  "uvicorn>=0.30,<0.32",
]

[tool.setuptools]
py-modules = []

